fix: suggested fix for tables overlapping the sidebar
set wrap div overflow to auto

--- a/backend/app/assets/stylesheets/spree/backend/shared/_base.scss
+++ b/backend/app/assets/stylesheets/spree/backend/shared/_base.scss
@@ -2,6 +2,10 @@ body {
   padding-top: $navbar-height + 2px;
 }
 
+.table-wrapper {
+  overflow: auto;
+}
+
 .row {
   padding: 0 0 15px 0;
 }
